--- a/index.html
+++ b/index.html
@@ -1,11 +1,283 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap/icons/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Plantas y Raíces</title>
   </head>
+
   <body>
-    <p>Esta sera mi pagina</p>
+    <!-- Encabezado -->
+    <div class="container-fluid text-center py-2">
+      <div class="row align-items-center gx-0">
+        <div class="col-2 col-sm-1">
+          <!-- Botón Hamburguesa -->
+          <nav class="navbar navbar-light">
+            <div class="container-fluid p-0">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+          </nav>
+        </div>
+
+        <div class="col-5 col-sm-3 p-2 position-relative">
+          <button
+            class="btn btn-outline-primary d-flex align-items-center"
+            type="button"
+            id="btnMostrarBusqueda"
+          >
+            <i class="bi bi-search me-2"></i> Buscar
+          </button>
+
+          <!-- Este div estará oculto y aparecerá al presionar el botón -->
+          <div
+            class="d-none"
+            id="barraBusqueda"
+            style="
+              position: absolute;
+              top: 100%;
+              left: 0;
+              right: 0;
+              z-index: 1050;
+              background-color: white;
+              padding: 10px;
+              border-radius: 8px;
+              box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            "
+          >
+            <div class="input-group">
+              <span class="input-group-text"><i class="bi bi-search"></i></span>
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Buscar productos..."
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-4 text-center">
+          <!-- Título -->
+          <h1 class="fs-2">Plantas y Raíces</h1>
+          <p class="fs-6">Hogar de plantas y jardinería</p>
+        </div>
+
+        <div class="col-3 col-sm-2 p-3">
+          <!-- Iniciar sesión -->
+          <p class="m-0">
+            <i class="bi bi-person-circle"></i>
+            <span class="d-none d-md-inline">
+              Iniciar sesión / Registrarse</span
+            >
+          </p>
+        </div>
+
+        <div class="col-2 p-3">
+          <!-- Carrito -->
+          <p class="m-0">
+            <i class="bi bi-cart"></i>
+            <span class="d-none d-md-inline"> Carrito</span>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Menú Offcanvas -->
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="offcanvasNavbar"
+      aria-labelledby="offcanvasNavbarLabel"
+    >
+      <div class="offcanvas-body">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Ofertas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Próximamente</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Banner -->
+    <div class="container-fluid text-center my-0 py-0 bg-light">
+      <div class="row">
+        <div class="col-12">
+          <p class="fs-5 fs-md-4 fs-lg-3 my-1 banner-text">
+            Jardinería, plantas y decoración para tu hogar
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Carrusel -->
+    <div class="container-fluid p-0 mt-0">
+      <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="img/baner.jpg"
+              class="d-block w-100"
+              alt="Banner de plantas y jardinería"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="img/baner.jpg"
+              class="d-block w-100"
+              alt="Banner de plantas y jardinería"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="img/baner.jpg"
+              class="d-block w-100"
+              alt="Banner de plantas y jardinería"
+            />
+          </div>
+        </div>
+
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
+    </div>
+
+    <!-- Cards de Productos -->
+    <div class="container-fluid my-5">
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="card mx-auto" style="width: 18rem">
+            <img
+              src="img/Planta.jpg"
+              class="card-img-top"
+              alt="Planta decorativa"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Ideal para interiores modernos y naturales.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+          <div class="card mx-auto" style="width: 18rem">
+            <img
+              src="img/Planta.jpg"
+              class="card-img-top"
+              alt="Planta decorativa"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Agrega vida y frescura a cualquier espacio.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+          <div class="card mx-auto" style="width: 18rem">
+            <img
+              src="img/Planta.jpg"
+              class="card-img-top"
+              alt="Planta decorativa"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Perfecta para regalar en cualquier ocasión.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card adicional -->
+      <div class="row">
+        <div class="col-md-4 mx-auto">
+          <div class="card" style="width: 18rem">
+            <img
+              src="img/Planta.jpg"
+              class="card-img-top"
+              alt="Planta decorativa"
+            />
+            <div class="card-body">
+              <p class="card-text">Belleza natural para tu hogar.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+      <div class="container-fluid p-5 text-center">
+        <div class="row">
+          <div class="col-12">
+            <a href="#" class="text-decoration-none">Síguenos en Instagram</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
