--- a/index.html
+++ b/index.html
@@ -12,13 +12,68 @@
   <body>
     <!-- Encabezado -->
     <div class="container-fluid text-center py-2">
-      <div class="row align-items-center gx-0">
-        <div class="col-2 col-sm-1">
+      <!-- Vista móvil -->
+      <div class="row align-items-center d-flex d-sm-none gx-1">
+        <!-- Menú hamburguesa -->
+        <div class="col-1">
+          <nav class="navbar navbar-light p-0">
+            <button
+              class="navbar-toggler border-0 bg-transparent p-0"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </nav>
+        </div>
+
+        <!-- Barra de búsqueda simple -->
+        <div class="col-9">
+          <div class="input-group input-group-sm">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Buscar..."
+              aria-label="Buscar"
+            />
+            <button class="btn btn-outline-secondary" type="button">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
+        </div>
+
+        <!-- Iniciar sesión -->
+        <div class="col-1 text-end">
+          <a href="#" class="text-decoration-none text-dark small">
+            <i class="bi bi-person-circle fs-5"></i>
+          </a>
+        </div>
+
+        <!-- Carrito -->
+        <div class="col-1 text-end">
+          <a href="#" class="text-decoration-none text-dark small">
+            <i class="bi bi-cart fs-5"></i>
+          </a>
+        </div>
+
+        <!-- Título -->
+        <div class="col-12 mt-2">
+          <h1 class="fs-4 m-0">Plantas y Raíces</h1>
+          <p class="fs-6 m-0">Hogar de plantas y jardinería</p>
+        </div>
+      </div>
+
+      <!-- Vista escritorio -->
+      <div class="row align-items-center gx-0 d-none d-sm-flex">
+        <div class="col-sm-1">
           <!-- Botón Hamburguesa -->
           <nav class="navbar navbar-light">
             <div class="container-fluid p-0">
               <button
-                class="navbar-toggler"
+                class="navbar-toggler border-0"
                 type="button"
                 data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasNavbar"
@@ -31,7 +86,7 @@
           </nav>
         </div>
 
-        <div class="col-5 col-sm-3 p-2 position-relative">
+        <div class="col-sm-3 p-2 position-relative">
           <button
             class="btn btn-outline-primary d-flex align-items-center"
             type="button"
@@ -40,7 +95,7 @@
             <i class="bi bi-search me-2"></i> Buscar
           </button>
 
-          <!-- Este div estará oculto y aparecerá al presionar el botón -->
+          <!-- Barra desplegable -->
           <div
             class="d-none"
             id="barraBusqueda"
@@ -67,32 +122,33 @@
           </div>
         </div>
 
-        <div class="col-12 col-sm-4 text-center">
+        <div class="col-sm-4 text-center">
           <!-- Título -->
-          <h1 class="fs-2">Plantas y Raíces</h1>
-          <p class="fs-6">Hogar de plantas y jardinería</p>
+          <h1 class="fs-2 m-0">Plantas y Raíces</h1>
+          <p class="fs-6 m-0">Hogar de plantas y jardinería</p>
         </div>
 
-        <div class="col-3 col-sm-2 p-3">
+        <div class="col-sm-4 d-flex justify-content-end align-items-center p-3">
           <!-- Iniciar sesión -->
-          <p class="m-0">
-            <i class="bi bi-person-circle"></i>
-            <span class="d-none d-md-inline">
-              Iniciar sesión / Registrarse</span
-            >
-          </p>
-        </div>
+          <div class="me-3">
+            <a href="#" class="text-decoration-none text-dark">
+              <i class="bi bi-person-circle me-1"></i>
+              <span class="d-none d-md-inline"
+                >Iniciar sesión / Registrarse</span
+              >
+            </a>
+          </div>
 
-        <div class="col-2 p-3">
           <!-- Carrito -->
-          <p class="m-0">
-            <i class="bi bi-cart"></i>
-            <span class="d-none d-md-inline"> Carrito</span>
-          </p>
+          <div>
+            <a href="#" class="text-decoration-none text-dark">
+              <i class="bi bi-cart me-1"></i>
+              <span class="d-none d-md-inline">Carrito</span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
-
     <!-- Menú Offcanvas -->
     <div
       class="offcanvas offcanvas-start"
