--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
       id="offcanvasNavbar"
       aria-labelledby="offcanvasNavbarLabel"
     >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Cerrar"
+        ></button>
+      </div>
       <div class="offcanvas-body">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -214,21 +223,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="img/baner.jpg"
+              src="img/baner.webp"
               class="d-block w-100"
               alt="Banner de plantas y jardinería"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="img/baner.jpg"
+              src="img/baner.webp"
               class="d-block w-100"
               alt="Banner de plantas y jardinería"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="img/baner.jpg"
+              src="img/baner.webp"
               class="d-block w-100"
               alt="Banner de plantas y jardinería"
             />
@@ -258,64 +267,124 @@
 
     <!-- Cards de Productos -->
     <div class="container-fluid my-5">
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <div class="card mx-auto" style="width: 18rem">
-            <img
-              src="img/Planta.jpg"
-              class="card-img-top"
-              alt="Planta decorativa"
-            />
-            <div class="card-body">
-              <p class="card-text">
-                Ideal para interiores modernos y naturales.
-              </p>
+      <div class="row g-3">
+        <!-- Tarjeta de producto -->
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+          <div class="card">
+            <img src="img/violas.webp" alt="Producto" class="product-img" />
+
+            <div class="product-info">
+              <div class="product-text">
+                <div class="product-title">Nombre del producto</div>
+                <div class="product-price">$60.000</div>
+              </div>
+
+              <button class="product-button">Agregar al carrito</button>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4 mb-4">
-          <div class="card mx-auto" style="width: 18rem">
-            <img
-              src="img/Planta.jpg"
-              class="card-img-top"
-              alt="Planta decorativa"
-            />
-            <div class="card-body">
-              <p class="card-text">
-                Agrega vida y frescura a cualquier espacio.
-              </p>
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+          <div class="card">
+            <img src="img/violas.webp" alt="Producto" class="product-img" />
+
+            <div class="product-info">
+              <div class="product-text">
+                <div class="product-title">Nombre del producto</div>
+                <div class="product-price">$60.000</div>
+              </div>
+
+              <button class="product-button">Agregar al carrito</button>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4 mb-4">
-          <div class="card mx-auto" style="width: 18rem">
-            <img
-              src="img/Planta.jpg"
-              class="card-img-top"
-              alt="Planta decorativa"
-            />
-            <div class="card-body">
-              <p class="card-text">
-                Perfecta para regalar en cualquier ocasión.
-              </p>
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+          <div class="card">
+            <img src="img/violas.webp" alt="Producto" class="product-img" />
+
+            <div class="product-info">
+              <div class="product-text">
+                <div class="product-title">Nombre del producto</div>
+                <div class="product-price">$60.000</div>
+              </div>
+
+              <button class="product-button">Agregar al carrito</button>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Card adicional -->
-      <div class="row">
-        <div class="col-md-4 mx-auto">
-          <div class="card" style="width: 18rem">
-            <img
-              src="img/Planta.jpg"
-              class="card-img-top"
-              alt="Planta decorativa"
-            />
-            <div class="card-body">
-              <p class="card-text">Belleza natural para tu hogar.</p>
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+          <div class="card">
+            <img src="img/violas.webp" alt="Producto" class="product-img" />
+
+            <div class="product-info">
+              <div class="product-text">
+                <div class="product-title">Nombre del producto</div>
+                <div class="product-price">$60.000</div>
+              </div>
+
+              <button class="product-button">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+          <div class="card">
+            <img src="img/violas.webp" alt="Producto" class="product-img" />
+
+            <div class="product-info">
+              <div class="product-text">
+                <div class="product-title">Nombre del producto</div>
+                <div class="product-price">$60.000</div>
+              </div>
+
+              <button class="product-button">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+          <div class="card">
+            <img src="img/violas.webp" alt="Producto" class="product-img" />
+
+            <div class="product-info">
+              <div class="product-text">
+                <div class="product-title">Nombre del producto</div>
+                <div class="product-price">$60.000</div>
+              </div>
+
+              <button class="product-button">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+          <div class="card">
+            <img src="img/violas.webp" alt="Producto" class="product-img" />
+
+            <div class="product-info">
+              <div class="product-text">
+                <div class="product-title">Nombre del producto</div>
+                <div class="product-price">$60.000</div>
+              </div>
+
+              <button class="product-button">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+          <div class="card">
+            <img src="img/violas.webp" alt="Producto" class="product-img" />
+
+            <div class="product-info">
+              <div class="product-text">
+                <div class="product-title">Nombre del producto</div>
+                <div class="product-price">$60.000</div>
+              </div>
+
+              <button class="product-button">Agregar al carrito</button>
             </div>
           </div>
         </div>
