--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- Encabezado -->
     <div class="container-fluid text-center py-2">
       <!-- Vista móvil -->
-      <div class="row align-items-center d-flex d-sm-none gx-1">
+      <div class="row align-items-center d-sm-none gx-2">
         <!-- Menú hamburguesa -->
-        <div class="col-1">
+        <div class="col-2">
           <nav class="navbar navbar-light p-0">
             <button
               class="navbar-toggler border-0 bg-transparent p-0"
@@ -31,7 +31,7 @@
         </div>
 
         <!-- Barra de búsqueda simple -->
-        <div class="col-9">
+        <div class="col-7">
           <div class="input-group input-group-sm">
             <input
               type="text"
@@ -45,18 +45,29 @@
           </div>
         </div>
 
-        <!-- Iniciar sesión -->
-        <div class="col-1 text-end">
-          <a href="#" class="text-decoration-none text-dark small">
+        <!-- Contenedor de iconos -->
+        <div class="col-3 d-flex justify-content-end gap-2">
+          <!-- Iniciar sesión -->
+          <button
+            class="btn d-flex align-items-center p-1"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasLogin"
+            aria-controls="offcanvasLogin"
+          >
             <i class="bi bi-person-circle fs-5"></i>
-          </a>
-        </div>
+          </button>
 
-        <!-- Carrito -->
-        <div class="col-1 text-end">
-          <a href="#" class="text-decoration-none text-dark small">
+          <!-- Carrito -->
+          <button
+            class="btn d-flex align-items-center p-1"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasCar"
+            aria-controls="offcanvasCar"
+          >
             <i class="bi bi-cart fs-5"></i>
-          </a>
+          </button>
         </div>
 
         <!-- Título -->
@@ -96,21 +107,7 @@
           </button>
 
           <!-- Barra desplegable -->
-          <div
-            class="d-none"
-            id="barraBusqueda"
-            style="
-              position: absolute;
-              top: 100%;
-              left: 0;
-              right: 0;
-              z-index: 1050;
-              background-color: white;
-              padding: 10px;
-              border-radius: 8px;
-              box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            "
-          >
+          <div class="d-none" id="barraBusqueda">
             <div class="input-group">
               <span class="input-group-text"><i class="bi bi-search"></i></span>
               <input
@@ -130,28 +127,45 @@
 
         <div class="col-sm-4 d-flex justify-content-end align-items-center p-3">
           <!-- Iniciar sesión -->
-          <div class="me-3">
-            <a href="#" class="text-decoration-none text-dark">
+          <!-- Botón para abrir el offcanvas de inicio de sesión -->
+          <div class="col-auto">
+            <button
+              class="btn d-flex align-items-center"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasLogin"
+              aria-controls="offcanvasLogin"
+            >
               <i class="bi bi-person-circle me-1"></i>
               <span class="d-none d-md-inline"
                 >Iniciar sesión / Registrarse</span
               >
-            </a>
+            </button>
           </div>
 
           <!-- Carrito -->
-          <div>
-            <a href="#" class="text-decoration-none text-dark">
-              <i class="bi bi-cart me-1"></i>
-              <span class="d-none d-md-inline">Carrito</span>
-            </a>
+          <!-- Botón para abrir el offcanvas de carrito -->
+          |
+          <div class="col-auto text-end">
+            <button
+              class="btn d-flex align-items-center"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasCar"
+              aria-controls="offcanvasCar"
+            >
+              <i class="bi bi-cart fs-5"></i>
+              <span class="d-none d-md-inline ms-1">Carrito</span>
+            </button>
           </div>
         </div>
       </div>
     </div>
+
     <!-- Menú Offcanvas -->
     <div
-      class="offcanvas offcanvas-start"
+      class="offcanvas offcanvas-start offcanvasMenu-custom-width"
+      style="width: 450px"
       tabindex="-1"
       id="offcanvasNavbar"
       aria-labelledby="offcanvasNavbarLabel"
@@ -168,18 +182,119 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="#">Catalogo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Productos</a>
+            <a class="nav-link" href="#">Consejos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ofertas</a>
+            <a class="nav-link" href="#">Sobre nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Próximamente</a>
+            <a class="nav-link disabled" aria-disabled="true">Contacto</a>
           </li>
         </ul>
+      </div>
+    </div>
+
+    <!-- Panel offcanvas para iniciar sesión -->
+    <div
+      class="offcanvas offcanvas-end"
+      style="width: 450px"
+      tabindex="-1"
+      id="offcanvasLogin"
+      aria-labelledby="offcanvasLoginLabel"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title text-center w-100" id="offcanvasLoginLabel">
+          Entra en tu cuenta
+        </h5>
+        <button
+          type="button"
+          class="btn-close text-reset"
+          data-bs-dismiss="offcanvas"
+          aria-label="Cerrar"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <form>
+          <div class="mb-3">
+            <label for="email" class="form-label"
+              >Dirección de correo electrónico</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Correo electrónico"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Contraseña</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              placeholder="Contraseña"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary w-100">
+            Iniciar sesión
+          </button>
+        </form>
+        <hr />
+        <div>
+          <p><strong>Crear cuenta</strong></p>
+          <p>
+            Tener una cuenta le permite acelerar su proceso de compra, revisar
+            su historial de pedidos y más.
+          </p>
+          <button class="btn btn-outline-primary w-100">Crear cuenta</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Offcanvas del Carrito -->
+    <div
+      class="offcanvas offcanvas-end offcanvasCar-custom-width"
+      tabindex="-1"
+      id="offcanvasCar"
+      aria-labelledby="offcanvasCarLabel"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasCarLabel">
+          Carrito
+          <span id="contador-carrito" class="badge bg-success ms-2">0</span>
+        </h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Cerrar"
+        ></button>
+      </div>
+      <div class="offcanvas-body d-flex flex-column">
+        <!-- Lista de productos con scroll si hay muchos items -->
+        <ul
+          id="listaCarrito"
+          class="list-group mb-3 flex-grow-1 overflow-auto"
+        ></ul>
+
+        <!-- Resumen y acciones -->
+        <div class="mt-auto">
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <strong class="fs-5">Total:</strong>
+            <span id="totalCarrito" class="fs-5 fw-bold">$0.00</span>
+          </div>
+
+          <button class="btn btn-danger w-100 mb-2" onclick="Carrito.vaciar()">
+            <i class="bi bi-trash-fill me-2"></i>Vaciar Carrito
+          </button>
+
+          <button class="btn btn-success w-100" onclick="procesarPago()">
+            <i class="bi bi-credit-card-fill me-2"></i>Proceder al Pago
+          </button>
+        </div>
       </div>
     </div>
 
@@ -267,125 +382,95 @@
 
     <!-- Cards de Productos -->
     <div class="container-fluid my-5">
-      <div class="row g-3">
-        <!-- Tarjeta de producto -->
-        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-          <div class="card">
-            <img src="img/violas.webp" alt="Producto" class="product-img" />
-
-            <div class="product-info">
-              <div class="product-text">
-                <div class="product-title">Nombre del producto</div>
-                <div class="product-price">$60.000</div>
-              </div>
-
-              <button class="product-button">Agregar al carrito</button>
+      <div class="grid-cards">
+        <div class="card" data-id="1">
+          <img src="img/violas.webp" alt="Violas" class="product-img" />
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Violas Decorativas</div>
+              <div class="product-price">$60.000</div>
             </div>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
           </div>
         </div>
 
-        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-          <div class="card">
-            <img src="img/violas.webp" alt="Producto" class="product-img" />
-
-            <div class="product-info">
-              <div class="product-text">
-                <div class="product-title">Nombre del producto</div>
-                <div class="product-price">$60.000</div>
-              </div>
-
-              <button class="product-button">Agregar al carrito</button>
+        <div class="card" data-id="2">
+          <img src="img/violas.webp" alt="Violas" class="product-img" />
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Violas Decorativas</div>
+              <div class="product-price">$60.000</div>
             </div>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
           </div>
         </div>
 
-        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-          <div class="card">
-            <img src="img/violas.webp" alt="Producto" class="product-img" />
-
-            <div class="product-info">
-              <div class="product-text">
-                <div class="product-title">Nombre del producto</div>
-                <div class="product-price">$60.000</div>
-              </div>
-
-              <button class="product-button">Agregar al carrito</button>
+        <div class="card" data-id="3">
+          <img src="img/violas.webp" alt="Violas" class="product-img" />
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Violas Decorativas</div>
+              <div class="product-price">$60.000</div>
             </div>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
           </div>
         </div>
 
-        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-          <div class="card">
-            <img src="img/violas.webp" alt="Producto" class="product-img" />
-
-            <div class="product-info">
-              <div class="product-text">
-                <div class="product-title">Nombre del producto</div>
-                <div class="product-price">$60.000</div>
-              </div>
-
-              <button class="product-button">Agregar al carrito</button>
+        <div class="card" data-id="4">
+          <img src="img/violas.webp" alt="Violas" class="product-img" />
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Violas Decorativas</div>
+              <div class="product-price">$60.000</div>
             </div>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
           </div>
         </div>
 
-        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-          <div class="card">
-            <img src="img/violas.webp" alt="Producto" class="product-img" />
+        <div class="card">
+          <img src="img/violas.webp" alt="Producto" class="product-img" />
 
-            <div class="product-info">
-              <div class="product-text">
-                <div class="product-title">Nombre del producto</div>
-                <div class="product-price">$60.000</div>
-              </div>
-
-              <button class="product-button">Agregar al carrito</button>
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Nombre del producto</div>
+              <div class="product-price">$60.000</div>
             </div>
+
+            <button class="product-button">Agregar al carrito</button>
           </div>
         </div>
 
-        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-          <div class="card">
-            <img src="img/violas.webp" alt="Producto" class="product-img" />
+        <div class="card">
+          <img src="img/violas.webp" alt="Producto" class="product-img" />
 
-            <div class="product-info">
-              <div class="product-text">
-                <div class="product-title">Nombre del producto</div>
-                <div class="product-price">$60.000</div>
-              </div>
-
-              <button class="product-button">Agregar al carrito</button>
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Nombre del producto</div>
+              <div class="product-price">$60.000</div>
             </div>
+
+            <button class="product-button">Agregar al carrito</button>
           </div>
         </div>
 
-        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-          <div class="card">
-            <img src="img/violas.webp" alt="Producto" class="product-img" />
+        <div class="card">
+          <img src="img/violas.webp" alt="Producto" class="product-img" />
 
-            <div class="product-info">
-              <div class="product-text">
-                <div class="product-title">Nombre del producto</div>
-                <div class="product-price">$60.000</div>
-              </div>
-
-              <button class="product-button">Agregar al carrito</button>
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Nombre del producto</div>
+              <div class="product-price">$60.000</div>
             </div>
-          </div>
-        </div>
 
-        <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-          <div class="card">
-            <img src="img/violas.webp" alt="Producto" class="product-img" />
-
-            <div class="product-info">
-              <div class="product-text">
-                <div class="product-title">Nombre del producto</div>
-                <div class="product-price">$60.000</div>
-              </div>
-
-              <button class="product-button">Agregar al carrito</button>
-            </div>
+            <button class="product-button">Agregar al carrito</button>
           </div>
         </div>
       </div>
