--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
 
       <!-- Vista escritorio -->
-
+      <!-- Barra de navegación -->
       <div class="row d-none d-sm-block mt-0 pt-0">
         <nav class="navbar navbar-expand-sm bg-body-tertiary">
           <div class="container-fluid">
@@ -629,19 +629,63 @@
       </div>
     </div>
 
-    <footer style="background-color: var(--marron); color: white">
-      <div class="container-fluid text-center py-4">
-        <div class="row mb-2">
-          <div class="col-12">
-            <a href="#" class="text-white text-decoration-none me-3">
+    <footer
+      class="text-white pt-5 pb-3"
+      style="background-color: var(--marron)"
+    >
+      <div class="container">
+        <div class="row text-center text-md-start">
+          <!-- Contacto -->
+          <div class="col-md-4 mb-4">
+            <h5 class="text-uppercase mb-3">Contáctanos</h5>
+            <p><i class="bi bi-geo-alt"></i> Sahagun, Córdoba</p>
+            <p><i class="bi bi-telephone"></i> +57 300 123 4567</p>
+            <p><i class="bi bi-envelope"></i> contacto@plantasyraices.com</p>
+          </div>
+
+          <!-- Enlaces -->
+          <div class="col-md-4 mb-4">
+            <h5 class="text-uppercase mb-3">Enlaces</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a href="index.html" class="footer-link">Catalogo</a>
+              </li>
+              <li>
+                <a href="consejos.html" class="footer-link">Consejos</a>
+              </li>
+              <li>
+                <a href="sobreNosotros.html" class="footer-link"
+                  >Sobre nosotros</a
+                >
+              </li>
+              <li>
+                <a href="contacto.html" class="footer-link">Contácto</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Redes Sociales -->
+          <div class="col-md-4 mb-4">
+            <h5 class="text-uppercase mb-3">Síguenos</h5>
+            <a href="#" class="footer-link d-block mb-2">
               <i class="bi bi-instagram"></i> Instagram
             </a>
-            <a href="#" class="text-white text-decoration-none me-3">
+            <a href="#" class="footer-link d-block mb-2">
               <i class="bi bi-facebook"></i> Facebook
+            </a>
+            <a href="#" class="footer-link d-block">
+              <i class="bi bi-whatsapp"></i> WhatsApp
             </a>
           </div>
         </div>
-        <p class="mb-0">&copy; 2025. Todos los derechos reservados.</p>
+
+        <hr class="border-top border-white opacity-50" />
+
+        <div class="text-center">
+          <p class="mb-0">
+            &copy; 2025 Plantas y Raíces. Todos los derechos reservados.
+          </p>
+        </div>
       </div>
     </footer>
 
