--- a/consejos.html
+++ b/consejos.html
@@ -71,7 +71,7 @@
 
         <!-- Título -->
         <div class="col-12 mt-2">
-          <h1 class="fs-3 m-0 fw-bold">Plantas y Raíces</h1>
+          <h2 class="m-0 fw-bold">Plantas y Raíces</h2>
           <p class="fs-6 m-0">Hogar de plantas y jardinería</p>
         </div>
       </div>
