--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="bootstrap/icons/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Plantas y Raíces</title>
@@ -358,10 +359,10 @@
                 <span class="text-muted text-decoration-line-through"
                   >$38.486</span
                 >
-                <span class="fw-bold text-danger product-price">$11.486</span>
+                <span class="fw-bold text-danger product-price">$28.864</span>
               </div>
               <button class="btn btn-success product-button mt-2 w-100">
-                <i class="bi bi-cart-plus"></i> Agregar
+                <i class="bi bi-cart-plus"></i> Agregar al carrito
               </button>
             </div>
           </div>
@@ -384,10 +385,10 @@
                 <span class="text-muted text-decoration-line-through"
                   >$65.586</span
                 >
-                <span class="fw-bold text-danger product-price">$60.476</span>
+                <span class="fw-bold text-danger product-price">$55.748</span>
               </div>
               <button class="btn btn-success product-button mt-2 w-100">
-                <i class="bi bi-cart-plus"></i> Agregar
+                <i class="bi bi-cart-plus"></i> Agregar al carrito
               </button>
             </div>
           </div>
@@ -410,36 +411,36 @@
                 <span class="text-muted text-decoration-line-through"
                   >$60.368</span
                 >
-                <span class="fw-bold text-danger product-price">$34.846</span>
+                <span class="fw-bold text-danger product-price">$42.257</span>
               </div>
               <button class="btn btn-success product-button mt-2 w-100">
-                <i class="bi bi-cart-plus"></i> Agregar
+                <i class="bi bi-cart-plus"></i> Agregar al carrito
               </button>
             </div>
           </div>
         </div>
 
         <div class="carousel-item">
-          <div class="card h-100 promotion-card" data-id="103">
+          <div class="card h-100 promotion-card" data-id="104">
             <span
               class="position-absolute top-0 start-0 bg-danger text-white px-2 py-1 m-2 rounded"
-              >-30%</span
+              >-20%</span
             >
             <img
-              src="img/Sedum erizo de mar.webp"
+              src="img/hiedra.png"
               class="card-img-top product-img"
               alt="Producto en promoción"
             />
             <div class="card-body product-info">
-              <h5 class="product-title">Anacampseros rufescens</h5>
+              <h5 class="product-title">Hiedra(Enredadera)</h5>
               <div class="product-text">
                 <span class="text-muted text-decoration-line-through"
-                  >$60.368</span
+                  >$30.900</span
                 >
-                <span class="fw-bold text-danger product-price">$34.846</span>
+                <span class="fw-bold text-danger product-price">$24.720</span>
               </div>
               <button class="btn btn-success product-button mt-2 w-100">
-                <i class="bi bi-cart-plus"></i> Agregar
+                <i class="bi bi-cart-plus"></i> Agregar al carrito
               </button>
             </div>
           </div>
@@ -467,6 +468,7 @@
               <div class="product-price">$42.900</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -484,6 +486,7 @@
               <div class="product-price">$60.000</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -501,6 +504,7 @@
               <div class="product-price">$72.000</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -518,6 +522,7 @@
               <div class="product-price">$36.900</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -535,6 +540,7 @@
               <div class="product-price">$30.000</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -552,6 +558,7 @@
               <div class="product-price">$58.000</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -569,6 +576,7 @@
               <div class="product-price">$175.000</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -586,6 +594,7 @@
               <div class="product-price">$14.900</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -603,6 +612,7 @@
               <div class="product-price">$10.000</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -622,6 +632,7 @@
               <div class="product-price">$44.222</div>
             </div>
             <button class="product-button btn-agregar">
+              <i class="bi bi-cart3 ms-2"></i>
               Agregar al carrito
             </button>
           </div>
@@ -636,7 +647,7 @@
       <div class="container">
         <div class="row text-center text-md-start">
           <!-- Contacto -->
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Contáctanos</h5>
             <p><i class="bi bi-geo-alt"></i> Sahagun, Córdoba</p>
             <p><i class="bi bi-telephone"></i> +57 300 123 4567</p>
@@ -644,7 +655,7 @@
           </div>
 
           <!-- Enlaces -->
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Enlaces</h5>
             <ul class="list-unstyled">
               <li>
@@ -665,19 +676,28 @@
           </div>
 
           <!-- Redes Sociales -->
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Síguenos</h5>
-            <a href="#" class="footer-link d-block mb-2">
-              <i class="bi bi-instagram"></i> Instagram
-            </a>
-            <a href="#" class="footer-link d-block mb-2">
-              <i class="bi bi-facebook"></i> Facebook
-            </a>
-            <a href="#" class="footer-link d-block">
-              <i class="bi bi-whatsapp"></i> WhatsApp
-            </a>
+            <ul class="list-unstyled d-inline-block text-start">
+              <li class="mb-2">
+                <a href="#" class="footer-link">
+                  <i class="bi bi-instagram"></i> Instagram
+                </a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="footer-link">
+                  <i class="bi bi-facebook"></i> Facebook
+                </a>
+              </li>
+              <li>
+                <a href="#" class="footer-link">
+                  <i class="bi bi-whatsapp"></i> WhatsApp
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
+        <!-- Cierre de .row -->
 
         <hr class="border-top border-white opacity-50" />
 
@@ -687,7 +707,13 @@
           </p>
         </div>
       </div>
+      <!-- Cierre de .container -->
     </footer>
+
+    <!-- Botón de WhatsApp -->
+    <a href="https://wa.me/TUNUMERO" class="whatsapp-float">
+      <i class="bi bi-whatsapp"></i>
+    </a>
 
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
