--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <link rel="stylesheet" href="bootstrap/icons/bootstrap-icons.min.css" />
     <link
       rel="stylesheet"
@@ -389,7 +391,7 @@
       <div class="container">
         <div class="row text-center text-md-start">
           <!-- Contacto -->
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Contáctanos</h5>
             <p><i class="bi bi-geo-alt"></i> Sahagun, Córdoba</p>
             <p><i class="bi bi-telephone"></i> +57 300 123 4567</p>
@@ -397,7 +399,7 @@
           </div>
 
           <!-- Enlaces -->
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Enlaces</h5>
             <ul class="list-unstyled">
               <li>
@@ -418,19 +420,28 @@
           </div>
 
           <!-- Redes Sociales -->
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4 text-center">
             <h5 class="text-uppercase mb-3">Síguenos</h5>
-            <a href="#" class="footer-link d-block mb-2">
-              <i class="bi bi-instagram"></i> Instagram
-            </a>
-            <a href="#" class="footer-link d-block mb-2">
-              <i class="bi bi-facebook"></i> Facebook
-            </a>
-            <a href="#" class="footer-link d-block">
-              <i class="bi bi-whatsapp"></i> WhatsApp
-            </a>
+            <ul class="list-unstyled d-inline-block text-start">
+              <li class="mb-2">
+                <a href="#" class="footer-link">
+                  <i class="bi bi-instagram"></i> Instagram
+                </a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="footer-link">
+                  <i class="bi bi-facebook"></i> Facebook
+                </a>
+              </li>
+              <li>
+                <a href="#" class="footer-link">
+                  <i class="bi bi-whatsapp"></i> WhatsApp
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
+        <!-- Cierre de .row -->
 
         <hr class="border-top border-white opacity-50" />
 
@@ -440,7 +451,13 @@
           </p>
         </div>
       </div>
+      <!-- Cierre de .container -->
     </footer>
+
+    <!-- Botón de WhatsApp -->
+    <a href="https://wa.me/TUNUMERO" class="whatsapp-float">
+      <i class="bi bi-whatsapp"></i>
+    </a>
 
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script
